# nexus_swarm_sim

./: .gitignore  CMakeLists.txt  INSTALL.md  PACKAGE_SCOPE.md  README.md  ROADMAP.md  UWB_INTERFACE_CONTRACT.md  package.xml  setup.sh  setup_ardupilot_noetic.sh
config/: arducopter_gazebo_iris_sim.parm  spawn_formation.yaml  uwb_simulator.yaml
docs/: README.md
docs/architecture/: DOWNSTREAM_PACKAGE_PLAN.md  SYSTEM_ARCHITECTURE.md
docs/contracts/: UWB_INTERFACE_CONTRACT.md
docs/downstream/: README.md  relative_localization.md  swarm_coordination.md  swarm_sensing.md  uwb_tools.md
docs/hardware/datasheets/: README.md
docs/hardware/uwb/qorvo/datasheets/: README.md
docs/planning/: ROADMAP.md
examples/: HOW_TO_RUN.md  README.md  neighbor_discovery_example.py  payload_injector_example.py  payload_processor.py  signal_processor_example.py
examples/discovery/: neighbor_discovery_example.py
examples/raw_signal/: raw_dstwr_exchange_consumer_example.py
include/: uwb_simulator.h
launch/: LAUNCHES.md  base.launch  full_swarm.launch  gazebo_spawn_service.launch  models_only.launch  single_vehicle_sitl.launch  spawn_dummy.launch  spawn_model.launch  spawn_sitl.launch  uwb_only.launch
models/sdf/: uwb_dummy.sdf
msg/: RawUWBSignal.msg  UwbRange.msg
scripts/: configure_stream_rates.py  gazebo_spawn_service.py  launch_mavros_bridge.py  model_renderer.py  placement_resolver.py  spawn_ardupilot_model.py  start_sitl_session.py  swarm_dashboard.py  swarm_launcher.py  vehicle_naming.py
scripts/dashboard/: __init__.py  app.py  index.html  runtime.py  web.py
scripts/dashboard/assets/: dashboard.css
scripts/dashboard/assets/dashboard/: api.js  config.js  format.js  main.js  map.js  render.js  select.js  state.js
src/: los_raycast_plugin.cpp  swarm_uwb_monitor.py  uwb_simulator.cpp
srv/: CheckLineOfSight.srv  DespawnDrone.srv  SpawnDrone.srv
worlds/: swarm_uwb.world
